hphp/hack/test/ide_code_actions/quickfixes/missing_method/missing_static_method.php
<?hh

interface IFoo {
  public static function bar(): void;
}

class Foo implements IFoo {
                   // ^ at-caret
  public function other(): void {}
}
